attempts to prevent some scrollbars

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-scrollbar: none;
+  -webkit-scrollbar: none !important;
 }
 html,
 body,
@@ -327,17 +327,18 @@ body {
 }
 #main-footer {
   grid-area: footer;
+  background: #461e25;
 }
 /* **********HOME PAGE*********** */
 #home-content {
   height: fit-content;
   width: 100%;
   max-width: 100vw;
-  overflow: scroll;
+  /* overflow: auto; */
   text-align: center;
   background: rgba(36, 60, 87, 0.842);
   margin: auto;
-  padding: 10px 0;
+  padding: 10px 0px 0px;
 }
 #home-hero-wrapper {
   display: flex;
@@ -513,16 +514,16 @@ textarea {
 }
 /* ************SKILLS************ */
 #skills-header {
-  height: 70px;
-  margin: 10px auto;
-  text-align: bottom;
+  height: 80px;
+  margin: auto;
+  text-align: center;
   background-image: url('../images/book.png');
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column-reverse !important;
-  width: 100vw !important;
+  /* width: 100vw !important; */
 }
 #skills-header h2 {
   margin: 0px;
@@ -544,8 +545,10 @@ li {
 
 .card-list {
   display: flex;
-  padding: 3rem;
-  overflow-x: scroll;
+  padding: 2rem;
+  max-width: 99vw;
+  margin: auto;
+  overflow-x: auto;
 }
 .card-list::-webkit-scrollbar {
   width: 10px !important;
